--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 bin
 obj
 build
-migration
+Migrations
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.sln
-.db*
+*.sln
+*.db
+*.db-shm
+*.db-wal
